# dolfinx-adjoint

./: .gitignore  HeatEquation.py  LinearElasticity.py  Poisson.py  README.md  Stokes.py  demo_Heat.py  demo_Poisson.py  demo_Stokes.py  pyproject.toml  setup.py  test.py  tests.py
.github/workflows/: ci.yml  docs-pages.yml  docs-publish.yml  docs.yml
demos/: heat_equation.ipynb  linear_elasticity.ipynb  poisson.ipynb  stokes.ipynb
docs/: conf.py  index.rst
dolfinx_adjoint/: __init__.py  active_subspace.py  contextvariable.py  dolfinx_adjoint.py  edge.py  graph.py  node.py  operation.py
dolfinx_adjoint/fem/: __init__.py  assemble.py  bcs.py  forms.py  function.py  petsc.py
dolfinx_adjoint/nls/: __init__.py  petsc.py
examples/: Poisson.py  PoissonAS.py  Stokes.py  StokesAS.py  StokesOptimization.py  TimeControl.py  demo_Heat.py  demo_KarhunenLoevePoisson.py  demo_Stokes.py
examples/Electromagnetics/: Electromagnetics.py
examples/Heat/: Heat.py  HeatOptimization.py  TimeControlOptimization.py  heat_opt_g.avi  heat_opt_u_0.avi  heat_opt_u_21.avi
examples/LinearElasticity/: LinearElasticity.py
examples/Poisson/: Poisson.py  PoissonOptimizationDiffusion.py  PoissonOptimizationSource.py
examples/Stokes/: Stokes.py  StokesAS.py  StokesOptimization.py
src/dolfinx_adjoint/: __init__.py  edge.py  graph.py  node.py
src/dolfinx_adjoint/fem/: __init__.py  assemble.py  bcs.py  forms.py  function.py  petsc.py
src/dolfinx_adjoint/nls/: __init__.py  petsc.py
tests/integrationtests/: conftest.py  test_heat_equation.py  test_linear_elasticity.py  test_poisson.py  test_poisson_taylor.py  test_stokes.py
tests/unittests/: test_graph_path.py
